# ppao

./: .gitignore  CMakeLists.txt  readme.md
src/: auto_canny.py  blurring.py  canny.py  colorspaces.py  contour.py  countours_only.py  drawing.h  drawing.py  equalize.py  getSet.h  get_set.py  hist.py  image_transformation.h  loadDisplaySave.h  load_display_save.py  main.cpp  otsu.py  resize.py  sobel_laplacian.py  split_merge.py  template.py  thresholding.py  translation.py  watershed.py
